# resume-tailor

./: .gitignore  README.md  atto.spec  package-lock.json  package.json  run.spec  setup.md
backend/: pyproject.toml  run.py
backend/app/: main.py  seed.py
backend/app/config/: __init__.py  manager.py  schemas.py
backend/app/exception_handlers/: __init__.py  application_error.py  not_found.py  service_error.py
backend/app/middleware/: __init__.py  logging.py
backend/app/prompts/: __init__.py  listing_extraction.py  resume_optimization.py
backend/app/repositories/: __init__.py  database_repository.py  file_repository.py  json_repository.py  vector_repository.py
backend/app/resources/prompts/: __init__.py  listing_extraction.py
backend/app/resources/scripts/: __init__.py  inject_base.py  markjs_injection.py  (+1 more)
backend/app/routers/: __init__.py  applications_router.py  config_router.py  experience_router.py  experiences_router.py  listings_router.py  profile_router.py  resume_router.py  resumes_router.py
backend/app/schemas/: __init__.py  application.py  dates.py  experience.py  listing.py  profile.py  resume.py  scraping.py  status_event.py  types.py
backend/app/services/: __init__.py  applications_service.py  experience_service.py  experiences_service.py  listings_service.py  llm_service.py  profile_service.py  resume_service.py  resumes_service.py  scraping_service.py  template_service.py
backend/app/utils/: deduplication.py  errors.py  structure.py  url.py
backend/config/: .env.example  advanced.user.yaml  config.default.yaml  config.user.yaml
(+169 files in other folders)
